--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./favicons/favicon-16x16.png">
     <link rel="stylesheet" href="./css/style.css">
 
-    <title>Pokédex</title>
+    <title>Pokédex Generation I-V</title>
 </head>
 <body>
     <main>
